--- a/dsgrid_project/datasets/modeled/aeo2021_reference/other_commercial/Growth_Factors/dataset.json5
+++ b/dsgrid_project/datasets/modeled/aeo2021_reference/other_commercial/Growth_Factors/dataset.json5
@@ -48,7 +48,7 @@
             file: "../../../../../dimensions/supplemental/census_divisions.csv",
             module: "dsgrid.dimension.standard",
             type: "geography",
-            name: "Census Division",
+            name: "census_division",
         },
         {
             "class": "Sector",
@@ -56,14 +56,14 @@
             file: "../../../../modeled/comstock/dimensions/sector_commercial.csv",
             module: "dsgrid.dimension.standard",
             type: "sector",
-            name: "Commercial",
+            name: "sector",
         },
         {
             "class": "Subsector",
             description: "AEO 2021 commercial non-building subsector (N=1)",
             file: "dimensions/subsector.csv",
             module: "dsgrid.dimension.standard",
-            name: "Non-building Commercial Subsector",
+            name: "subsector",
             type: "subsector",
         },
         {
@@ -72,7 +72,7 @@
             file: "dimensions/metric.csv",
             module: "dsgrid.dimension.standard",
             type: "metric",
-            name: "AEO Unspecified Electricity End Uses",
+            name: "aeo_unspecified_electricity_end_use",
         },
         {
             "class": "Scenario",
@@ -80,14 +80,14 @@
             file: "../../commercial/End_Use_Growth_Factors/dimensions/aeo_reference_scenario.csv",
             module: "dsgrid.dimension.standard",
             type: "scenario",
-            name: "AEO Reference Scenario",
+            name: "reference_scenario",
         },
         {
             "class": "WeatherYear",
             description: "Weather year, 2012 only",
             file: "../../../../../dimensions/weather_years.csv",
             module: "dsgrid.dimension.standard",
-            name: "Weather 2012",
+            name: "weather_year_2012",
             type: "weather_year",
         },
         {
@@ -96,7 +96,7 @@
             file: "../../commercial/End_Use_Growth_Factors/dimensions/model_years_trivial_2013_to_2050.csv",
             module: "dsgrid.dimension.standard",
             type: "model_year",
-            name: "AEO Model Years",
+            name: "model_year",
         },
         {
             "class": "NoOpTime",
@@ -104,7 +104,7 @@
             time_type: "noop",
             module: "dsgrid.dimension.standard",
             type: "time",
-            name: "No Op Time",
+            name: "no_op_time",
         },
     ]
 }
