--- a/dsgrid_project/datasets/historical/dsgrid_efs_2012_distributed_generation/dataset.json5
+++ b/dsgrid_project/datasets/historical/dsgrid_efs_2012_distributed_generation/dataset.json5
@@ -37,7 +37,7 @@
   dimensions: [
     {
       type: "geography",
-      name: "States",
+      name: "state",
       file: "dimensions/geography.csv",
       module: "dsgrid.dimension.standard",
       "class": "State",
@@ -45,7 +45,7 @@
     },
     {
       type: "sector",
-      name: "Commercial Industrial and Residential Sectors",
+      name: "sector",
       file: "dimensions/sector.csv",
       module: "dsgrid.dimension.standard",
       "class": "Sector",
@@ -53,7 +53,7 @@
     },
     {
       type: "subsector",
-      name: "Unspecified Subsectors",
+      name: "unspecified_subsector",
       file: "dimensions/subsectors.csv",
       module: "dsgrid.dimension.standard",
       "class": "Subsector",
@@ -61,7 +61,7 @@
     },
     {
       type: "metric",
-      name: "CHP and Thermal DG",
+      name: "chp_thermal_dg",
       file: "dimensions/metric.csv",
       module: "dsgrid.dimension.standard",
       "class": "EnergyEndUse",
@@ -69,7 +69,7 @@
     },
     {
       type: "scenario",
-      name: "Reference",
+      name: "reference_scenario",
       file: "../../modeled/resstock/dimensions/scenario_conus_2022_reference.csv",
       module: "dsgrid.dimension.standard",
       "class": "Scenario",
@@ -77,7 +77,7 @@
     },
     {
       type: "model_year",
-      name: "2012",
+      name: "model_year_2012",
       file: "dimensions/model_year.csv",
       module: "dsgrid.dimension.standard",
       "class": "ModelYear",
@@ -88,12 +88,12 @@
       description: "Weather year, 2012 only",
       file: "../../../dimensions/weather_years.csv",
       module: "dsgrid.dimension.standard",
-      name: "2012 Weather",
+      name: "weather_year_2012",
       type: "weather_year",
     },
     {
       // Note: this does not match the project time because of it being period-ending, not period-beginning
-      name: "2012 Hourly EST",
+      name: "EST_hourly_2012",
       type: "time",
       module: "dsgrid.dimension.standard",
       "class": "Time",
