--- a/dsgrid_project/datasets/historical/dsgrid_efs_2012_losses/dataset.json5
+++ b/dsgrid_project/datasets/historical/dsgrid_efs_2012_losses/dataset.json5
@@ -35,7 +35,7 @@
   dimensions: [
     {
       type: 'geography',
-      name: 'States',
+      name: 'state',
       file: '../../../dimensions/supplemental/states.csv',
       module: 'dsgrid.dimension.standard',
       class: 'State',
@@ -43,7 +43,7 @@
     },
     {
       type: 'sector',
-      name: 'All Sectors',
+      name: 'all_sectors',
       file: 'dimensions/sector.csv',
       module: 'dsgrid.dimension.standard',
       class: 'Sector',
@@ -51,7 +51,7 @@
     },
     {
       type: 'subsector',
-      name: 'Subsector Unspecified',
+      name: 'unspecified_subsector',
       file: 'dimensions/subsectors.csv',
       module: 'dsgrid.dimension.standard',
       class: 'Subsector',
@@ -59,7 +59,7 @@
     },
     {
       type: 'metric',
-      name: 'Unspecified Electricity',
+      name: 'unspecified_electricity',
       file: 'dimensions/metric.csv',
       module: 'dsgrid.dimension.standard',
       class: 'EnergyEndUse',
@@ -67,7 +67,7 @@
     },
     {
       type: 'scenario',
-      name: 'Reference',
+      name: 'reference_scenario',
       file: '../../modeled/resstock/dimensions/scenario_conus_2022_reference.csv',
       module: 'dsgrid.dimension.standard',
       class: 'Scenario',
@@ -75,7 +75,7 @@
     },
     {
       type: 'model_year',
-      name: '2012',
+      name: 'model_year_2012',
       file: 'dimensions/model_year.csv',
       module: 'dsgrid.dimension.standard',
       class: 'ModelYear',
@@ -86,12 +86,12 @@
       description: 'Weather year, 2012 only',
       file: '../../../dimensions/weather_years.csv',
       module: 'dsgrid.dimension.standard',
-      name: '2012 Weather',
+      name: 'weather_year_2012',
       type: 'weather_year',
     },
     {
       // Note: this does not match the project time because of it being period-ending, not period-beginning
-      name: '2012 Hourly EST',
+      name: 'EST_hourly_2012',
       type: 'time',
       module: 'dsgrid.dimension.standard',
       class: 'Time',
