--- a/dsgrid_project/datasets/modeled/tempo/counts/dataset.json5
+++ b/dsgrid_project/datasets/modeled/tempo/counts/dataset.json5
@@ -1,9 +1,9 @@
 {
-  dataset_id: "tempo_conus_2022",
+  dataset_id: "tempo_conus_2022_counts",
   dataset_type: "modeled",
   data_source: "tempo",
   sector_description: "transportation",
-  description: "CONUS 2022 TEMPO county-level results for PEV charging.",
+  description: "CONUS 2022 TEMPO county-level results for numbers of vehicles.",
   origin_creator: "Arthur Yip",
   origin_organization: "NREL",
   origin_contributors: [
@@ -48,44 +48,48 @@
     {
       "class": "Subsector",
       type: "subsector",
-      name: "household_and_vehicle_type",
+      name: "tempo_bin",
       file: "dimensions/bin.csv",
       description: "TEMPO demographic/geographic/vehicle bins. This is a cross-join of the following supplemental dimensions: * Composition (Single Driver, Some Drivers Smaller, Some Drivers Larger) * Income (Low Income, Middle Income, High Income) * Urbanity (Rural, Small Town, Suburban, Second City, Urban) * Vehicle Size Class (Compact, Midsize, SUV, Pickup) * Tech (PHEV25/PHEV50/BEV100/BEV300) ",
     },
     {
-      "class": "EnergyEndUse",
-      type: "metric",
-      name: "ev_charging_type",
-      file: "dimensions/end_use.csv",
-      description: "Type of charging (L1 and L2, DCFC) used by TEMPO PEVs.",
+        // Would be slimmed down to just vehicle counts
+        "class": "Population",
+        description: "Transportation and building stock size",
+        file: "dimensions/counts.csv",
+        module: "dsgrid.dimension.standard",
+        name: "count",
+        type: "metric",
     },
     {
-      "class": "Time",
-      type: "time",
-      name: "hourly_for_representative_weeks",
+      // Years would match model years?
+      type: 'time',
+      class: 'AnnualTime',
+      time_type: 'annual',
+      module: 'dsgrid.dimension.standard',
+      description: 'Annual time 2010-2020',
+      name: 'annual_time',
       ranges: [
         {
-          start: 1,
-          end: 12,
+          start: '2010',
+          end: '2020',
         },
       ],
-      time_interval_type: "period_ending",
-      time_type: "representative_period",
-      measurement_type: "total",
-      format: "one_week_per_month_by_hour",
-      description: "TEMPO Time - Month (representing seasons), day of week, and hour of day.",
+      str_format: '%Y',
+      include_leap_day: true,
+      measurement_type: 'total',
     },
     {
       "class": "ModelYear",
       type: "model_year",
-      name: "model_year",
+      name: "tempo_model_year",
       file: "dimensions/year.csv",
       description: "TEMPO modeling years for CONUS 2022 project, 2018-2050",
     },
     {
       "class": "Sector",
       type: "sector",
-      name: "sector",
+      name: "transportation",
       file: "dimensions/sector.csv",
       description: "Transportation Sector",
     },
@@ -93,7 +97,7 @@
       // TODO: remove this scenario dimension when we are ready to scrap the dummy dataset
       "class": "Scenario",
       type: "scenario",
-      name: "Scenario",
+      name: "scenario",
       file: "dimensions/scenario.csv",
       description: "EV Scenarios: AEO Reference, EFS High Electrification, LDV Sales All-EV by 2035",
     },
