--- a/dsgrid_project/datasets/historical/dsgrid_efs_historical_2012_conus_load_shapes/dataset.json5
+++ b/dsgrid_project/datasets/historical/dsgrid_efs_historical_2012_conus_load_shapes/dataset.json5
@@ -93,7 +93,7 @@
       description: "Weather year, 2012 only",
       file: "dimensions/weather_year.csv",
       module: "dsgrid.dimension.standard",
-      name: "weather_year_2012",
+      name: "weather_2012",
       type: "weather_year",
     },
     {
