--- a/dsgrid_project/project.json5
+++ b/dsgrid_project/project.json5
@@ -647,6 +647,20 @@
           mapping_type: 'many_to_one_aggregation',
         },
       },
+      {
+        "class": "EnergyEndUse",
+        description: "dsgrid CONUS 2022 Heating and Cooling End Uses (all fuel types)",
+        file: "dimensions/simplified_end_uses.csv",
+        module: "dsgrid.dimension.standard",
+        name: "CONUS-2022-Heating-Cooling-End-Uses",
+        display_name: "Heating and Cooling End Uses",
+        type: 'metric',
+        mapping: {
+            description: 'Maps from all end uses to heating and cooling end uses',
+            file: 'dimension_mapings/base_to_supplemental/lookup_end_use_to_heating_cooling.csv',
+            mapping_type: 'many_to_one_aggregation',
+        }
+      },
     ],
   },
 }
